@@ -1,4 +1,4 @@
-/* $Id: conf.c,v 1.56 2008/09/07 00:13:34 manu Exp $ */
+/* $Id: conf.c,v 1.57 2008/09/26 17:00:51 manu Exp $ */
 
 /*
  * Copyright (c) 2004 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: conf.c,v 1.56 2008/09/07 00:13:34 manu Exp $");
+__RCSID("$Id: conf.c,v 1.57 2008/09/26 17:00:51 manu Exp $");
 #endif
 #endif
 
@@ -461,6 +461,7 @@ conf_defaults(c)
 	c->c_dracdb = DRACDB;
 	c->c_nodrac = 0;
 	c->c_maxpeek = 0;
+	c->c_logfac = LOG_MAIL;
 #ifdef USE_DKIM
 	c->c_dkim = NULL;
 #endif
