@@ -1,4 +1,5 @@
-%token TNUMBER ADDR IPADDR IP6ADDR CIDR HELO FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB EXTENDEDREGEX NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE QSTRING TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR SYNCSRCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT DB NODRAC DRAC DUMP_NO_TIME_TRANSLATION LOGEXPIRED GLXDELAY DNSRBL LIST OPENLIST CLOSELIST BLACKLIST FLUSHADDR CODE ECODE MSG SM_MACRO UNSET URLCHECK RACL DACL GLHEADER BODY MAXPEEK STAT POSTMSG FORK GETPROP CLEAR PROP AUTH TLS SPF DKIMCHECK MSGSIZE RCPTCOUNT OP NO SLASH MINUS COMMA TIME GEOIPDB GEOIP PASS FAIL SOFTFAIL NEUTRAL UNKNWON ERROR SELF SPF_STATUS LDAPCONF LDAPCHECK P0FSOCK P0F
+%token TNUMBER ADDR IPADDR IP6ADDR CIDR HELO FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB EXTENDEDREGEX NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE QSTRING TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR SYNCSRCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT DB NODRAC DRAC DUMP_NO_TIME_TRANSLATION LOGEXPIRED GLXDELAY DNSRBL LIST OPENLIST CLOSELIST BLACKLIST FLUSHADDR NOLOG CODE ECODE MSG SM_MACRO UNSET URLCHECK RACL DACL GLHEADER BODY MAXPEEK STAT POSTMSG FORK GETPROP CLEAR PROP AUTH TLS SPF MSGSIZE RCPTCOUNT OP NO SLASH MINUS COMMA TIME GEOIPDB GEOIP PASS FAIL SOFTFAIL NEUTRAL UNKNWON ERROR SELF SPF_STATUS LDAPCONF LDAPCHECK
+%token LOGFAC LOGFAC_KERN LOGFAC_USER LOGFAC_MAIL LOGFAC_DAEMON LOGFAC_AUTH LOGFAC_SYSLOG LOGFAC_LPR LOGFAC_NEWS LOGFAC_UUCP LOGFAC_CRON LOGFAC_AUTHPRIV LOGFAC_FTP LOGFAC_LOCAL0 LOGFAC_LOCAL1 LOGFAC_LOCAL2 LOGFAC_LOCAL3 LOGFAC_LOCAL4 LOGFAC_LOCAL5 LOGFAC_LOCAL6 LOGFAC_LOCAL7
 
 %{
 #include "config.h"
@@ -6,7 +7,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID  
-__RCSID("$Id: conf_yacc.y,v 1.89 2008/09/07 00:13:34 manu Exp $");
+__RCSID("$Id: conf_yacc.y,v 1.90 2008/09/26 17:00:51 manu Exp $");
 #endif
 #endif
 
@@ -119,6 +120,7 @@ lines	:	lines netblock '\n'
 	|	lines nodetach '\n'
 	|	lines lazyaw '\n'
 	|	lines report '\n'
+	|	lines logfac '\n'
 	|	lines statdef '\n'
 	|	lines dumpfreq '\n'
 	|	lines timeout '\n'
@@ -411,6 +413,29 @@ report:		REPORT NONE	{ conf.c_report = C_GLNONE; }
 	|	REPORT ALL	{ conf.c_report = C_ALL; }
 	;
 
+logfac:	LOGFAC NONE { conf.c_logfac = -1; }
+	|	LOGFAC LOGFAC_KERN { conf.c_logfac = LOG_KERN; }
+	|	LOGFAC LOGFAC_USER { conf.c_logfac = LOG_USER; }
+	|	LOGFAC LOGFAC_MAIL { conf.c_logfac = LOG_MAIL; }
+	|	LOGFAC LOGFAC_DAEMON { conf.c_logfac = LOG_DAEMON; }
+	|	LOGFAC LOGFAC_AUTH { conf.c_logfac = LOG_AUTH; }
+	|	LOGFAC LOGFAC_SYSLOG { conf.c_logfac = LOG_SYSLOG; }
+	|	LOGFAC LOGFAC_LPR { conf.c_logfac = LOG_LPR; }
+	|	LOGFAC LOGFAC_NEWS { conf.c_logfac = LOG_NEWS; }
+	|	LOGFAC LOGFAC_UUCP { conf.c_logfac = LOG_UUCP; }
+	|	LOGFAC LOGFAC_CRON { conf.c_logfac = LOG_CRON; }
+	|	LOGFAC LOGFAC_AUTHPRIV { conf.c_logfac = LOG_AUTHPRIV; }
+	|	LOGFAC LOGFAC_FTP { conf.c_logfac = LOG_FTP; }
+	|	LOGFAC LOGFAC_LOCAL0 { conf.c_logfac = LOG_LOCAL0; }
+	|	LOGFAC LOGFAC_LOCAL1 { conf.c_logfac = LOG_LOCAL1; }
+	|	LOGFAC LOGFAC_LOCAL2 { conf.c_logfac = LOG_LOCAL2; }
+	|	LOGFAC LOGFAC_LOCAL3 { conf.c_logfac = LOG_LOCAL3; }
+	|	LOGFAC LOGFAC_LOCAL4 { conf.c_logfac = LOG_LOCAL4; }
+	|	LOGFAC LOGFAC_LOCAL5 { conf.c_logfac = LOG_LOCAL5; }
+	|	LOGFAC LOGFAC_LOCAL6 { conf.c_logfac = LOG_LOCAL6; }
+	|	LOGFAC LOGFAC_LOCAL7 { conf.c_logfac = LOG_LOCAL7; }
+	;
+
 statdef:	STAT QSTRING QSTRING	{ 
 				char output[QSTRLEN + 1];
 				char format[QSTRLEN + 1];
@@ -659,6 +684,7 @@ acl_value:	greylist_value
 	|	msg_value
 	|	report_value
 	|	flush_value
+	|	nolog_value
 	;
 
 greylist_value:		GLXDELAY TDELAY 
@@ -668,6 +694,8 @@ autowhite_value:	AUTOWHITE TDELAY
 			    { acl_add_autowhite((time_t)humanized_atoi($2)); }
 	;
 flush_value:		FLUSHADDR { acl_add_flushaddr(); }
+	;
+nolog_value:		NOLOG { acl_add_nolog(); }
 	;
 code_value:		CODE QSTRING {
 				char code[QSTRLEN + 1];
