@@ -1,5 +1,5 @@
 .\"
-.\" $Id: milter-greylist.8,v 1.42 2007/10/23 11:38:51 manu Exp $
+.\" $Id: milter-greylist.8,v 1.43 2008/09/26 17:00:51 manu Exp $
 .\"
 .\" Copyright (c) 2004 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -325,6 +325,7 @@ Ivan F. Martinez,
 Jacques Beigbeder,
 Jeff Rife,
 Jobst Schmalenbach,
+Joe Pruett,
 Joel Bertrand,
 Johann E. Klasek,
 John Thiltges,
